{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 36,
  "lineage": "57c08e83-3635-15ad-8513-8cc0e458f2a0",
  "resources": [
    {
      "module": "module.bastion_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:security-group/sg-0beffbefbd3048a23",
            "description": "Management Platform Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0beffbefbd3048a23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "103.195.202.202/32"
                ],
                "description": "SSH (103.195.202.202/32)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "103.235.0.227/32"
                ],
                "description": "SSH (103.235.0.227/32)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "crystal-production-bastion-security-group",
            "name_prefix": "",
            "owner_id": "746760141698",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-bastion-security-group",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-bastion-security-group",
              "Project": "Crystal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e75815bda5198e04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "sg-0beffbefbd3048a23",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:security-group-rule/sgr-0b9ba00595aa82ea1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0b9ba00595aa82ea1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0beffbefbd3048a23",
            "security_group_rule_id": "sgr-0b9ba00595aa82ea1",
            "tags": null,
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Crystal"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "sgr-0b9ba00595aa82ea1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.bastion_security_group.aws_security_group.management",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:security-group-rule/sgr-05cf1833649e26e0c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP",
            "from_port": 80,
            "id": "sgr-05cf1833649e26e0c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0beffbefbd3048a23",
            "security_group_rule_id": "sgr-05cf1833649e26e0c",
            "tags": null,
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Crystal"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "sgr-05cf1833649e26e0c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.bastion_security_group.aws_security_group.management",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:security-group-rule/sgr-095887cc9bc792e9a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgr-095887cc9bc792e9a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0beffbefbd3048a23",
            "security_group_rule_id": "sgr-095887cc9bc792e9a",
            "tags": null,
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Crystal"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "sgr-095887cc9bc792e9a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.bastion_security_group.aws_security_group.management",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "103.195.202.202/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:security-group-rule/sgr-0de09dafb88b7b86c",
            "cidr_ipv4": "103.195.202.202/32",
            "cidr_ipv6": null,
            "description": "SSH (103.195.202.202/32)",
            "from_port": 22,
            "id": "sgr-0de09dafb88b7b86c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0beffbefbd3048a23",
            "security_group_rule_id": "sgr-0de09dafb88b7b86c",
            "tags": null,
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Crystal"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "sgr-0de09dafb88b7b86c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.bastion_security_group.aws_security_group.management",
            "module.production_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "103.235.0.227/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:security-group-rule/sgr-0f63e621bf092c5d5",
            "cidr_ipv4": "103.235.0.227/32",
            "cidr_ipv6": null,
            "description": "SSH (103.235.0.227/32)",
            "from_port": 22,
            "id": "sgr-0f63e621bf092c5d5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0beffbefbd3048a23",
            "security_group_rule_id": "sgr-0f63e621bf092c5d5",
            "tags": null,
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Crystal"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "sgr-0f63e621bf092c5d5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.bastion_security_group.aws_security_group.management",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:internet-gateway/igw-0bfd1fe4ddf2225f9",
            "id": "igw-0bfd1fe4ddf2225f9",
            "owner_id": "746760141698",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-igw",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-igw",
              "Project": "Crystal"
            },
            "vpc_id": "vpc-0e75815bda5198e04"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "igw-0bfd1fe4ddf2225f9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5f9883b39c7a97b",
            "arn": "arn:aws:ec2:ap-south-1:746760141698:elastic-ip/eipalloc-0a5f9883b39c7a97b",
            "domain": "vpc",
            "id": "eipalloc-0a5f9883b39c7a97b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-0-218-0.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.218.0",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-nat-eip",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-nat-eip",
              "Project": "Crystal"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "eipalloc-0a5f9883b39c7a97b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_internet_gateway.aws_internet_gateway.this",
            "module.production_route_table.aws_route.internet",
            "module.production_route_table.aws_route_table.private",
            "module.production_route_table.aws_route_table.public",
            "module.production_route_table.aws_route_table_association.private",
            "module.production_route_table.aws_route_table_association.public",
            "module.production_subnets.aws_subnet.private",
            "module.production_subnets.aws_subnet.public",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5f9883b39c7a97b",
            "association_id": "eipassoc-09135093d61e085b3",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0544abf333010b983",
            "network_interface_id": "eni-018c3aae59aa2cf9e",
            "private_ip": "10.2.1.156",
            "public_ip": "65.0.218.0",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0efa15a86492442c0",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-nat-gateway",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-nat-gateway",
              "Project": "Crystal"
            },
            "vpc_id": "vpc-0e75815bda5198e04"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "nat-0544abf333010b983",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_internet_gateway.aws_internet_gateway.this",
            "module.production_nat_gateway.aws_eip.this",
            "module.production_route_table.aws_route.internet",
            "module.production_route_table.aws_route_table.private",
            "module.production_route_table.aws_route_table.public",
            "module.production_route_table.aws_route_table_association.private",
            "module.production_route_table.aws_route_table_association.public",
            "module.production_subnets.aws_subnet.private",
            "module.production_subnets.aws_subnet.public",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_nat_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00d43ee5dffb92caf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0544abf333010b983",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-00d43ee5dffb92caf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-00d43ee5dffb92caf"
          },
          "dependencies": [
            "module.production_internet_gateway.aws_internet_gateway.this",
            "module.production_nat_gateway.aws_eip.this",
            "module.production_nat_gateway.aws_nat_gateway.this",
            "module.production_route_table.aws_route.internet",
            "module.production_route_table.aws_route_table.private",
            "module.production_route_table.aws_route_table.public",
            "module.production_route_table.aws_route_table_association.private",
            "module.production_route_table.aws_route_table_association.public",
            "module.production_subnets.aws_subnet.private",
            "module.production_subnets.aws_subnet.public",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:network-acl/acl-0bda5c0820f5180f7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bda5c0820f5180f7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.2.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.2.0.0/16",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              }
            ],
            "owner_id": "746760141698",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-007c5eec701ca06ef",
              "subnet-00e52cdfdac9f330a"
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-private-network-acl",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-private-network-acl",
              "Project": "Crystal"
            },
            "vpc_id": "vpc-0e75815bda5198e04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_subnets.aws_subnet.private",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:network-acl/acl-041add3f416ae7ced",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-041add3f416ae7ced",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "746760141698",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-0120c325be64e5677",
              "subnet-0efa15a86492442c0"
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-public-network-acl",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-public-network-acl",
              "Project": "Crystal"
            },
            "vpc_id": "vpc-0e75815bda5198e04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.production_subnets.aws_subnet.public",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3552077999",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0bda5c0820f5180f7",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "egress": true,
            "network_acl_id": "acl-0bda5c0820f5180f7",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_number": 100
          },
          "dependencies": [
            "module.production_network_acl.aws_network_acl.private",
            "module.production_subnets.aws_subnet.private",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_ephemeral_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.2.0.0/16",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2020628572",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0bda5c0820f5180f7",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "egress": false,
            "network_acl_id": "acl-0bda5c0820f5180f7",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_number": 110
          },
          "dependencies": [
            "module.production_network_acl.aws_network_acl.private",
            "module.production_subnets.aws_subnet.private",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_vpc_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.2.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-493143436",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0bda5c0820f5180f7",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "egress": false,
            "network_acl_id": "acl-0bda5c0820f5180f7",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_number": 100
          },
          "dependencies": [
            "module.production_network_acl.aws_network_acl.private",
            "module.production_subnets.aws_subnet.private",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1212665246",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-041add3f416ae7ced",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "egress": true,
            "network_acl_id": "acl-041add3f416ae7ced",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_number": 100
          },
          "dependencies": [
            "module.production_network_acl.aws_network_acl.public",
            "module.production_subnets.aws_subnet.public",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ephemeral_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2026710589",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-041add3f416ae7ced",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "egress": false,
            "network_acl_id": "acl-041add3f416ae7ced",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_number": 130
          },
          "dependencies": [
            "module.production_network_acl.aws_network_acl.public",
            "module.production_subnets.aws_subnet.public",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3305589491",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-041add3f416ae7ced",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "egress": false,
            "network_acl_id": "acl-041add3f416ae7ced",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_number": 100
          },
          "dependencies": [
            "module.production_network_acl.aws_network_acl.public",
            "module.production_subnets.aws_subnet.public",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-412193654",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-041add3f416ae7ced",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "egress": false,
            "network_acl_id": "acl-041add3f416ae7ced",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_number": 110
          },
          "dependencies": [
            "module.production_network_acl.aws_network_acl.public",
            "module.production_subnets.aws_subnet.public",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2774269880",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-041add3f416ae7ced",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "egress": false,
            "network_acl_id": "acl-041add3f416ae7ced",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_number": 120
          },
          "dependencies": [
            "module.production_network_acl.aws_network_acl.public",
            "module.production_subnets.aws_subnet.public",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bfd1fe4ddf2225f9",
            "id": "r-rtb-04512183b526bb0f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-04512183b526bb0f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-04512183b526bb0f6"
          },
          "dependencies": [
            "module.production_internet_gateway.aws_internet_gateway.this",
            "module.production_route_table.aws_route_table.public",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:route-table/rtb-00d43ee5dffb92caf",
            "id": "rtb-00d43ee5dffb92caf",
            "owner_id": "746760141698",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-private-route-table",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-private-route-table",
              "Project": "Crystal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e75815bda5198e04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "rtb-00d43ee5dffb92caf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:route-table/rtb-04512183b526bb0f6",
            "id": "rtb-04512183b526bb0f6",
            "owner_id": "746760141698",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bfd1fe4ddf2225f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-public-route-table",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-public-route-table",
              "Project": "Crystal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e75815bda5198e04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "rtb-04512183b526bb0f6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090ad04aeea2b4f6f",
            "region": "ap-south-1",
            "route_table_id": "rtb-00d43ee5dffb92caf",
            "subnet_id": "subnet-00e52cdfdac9f330a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "rtbassoc-090ad04aeea2b4f6f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_route_table.aws_route_table.private",
            "module.production_subnets.aws_subnet.private",
            "module.production_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0173ac27b1b408079",
            "region": "ap-south-1",
            "route_table_id": "rtb-00d43ee5dffb92caf",
            "subnet_id": "subnet-007c5eec701ca06ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "rtbassoc-0173ac27b1b408079",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_route_table.aws_route_table.private",
            "module.production_subnets.aws_subnet.private",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ace86972b4ea6bf",
            "region": "ap-south-1",
            "route_table_id": "rtb-04512183b526bb0f6",
            "subnet_id": "subnet-0efa15a86492442c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "rtbassoc-07ace86972b4ea6bf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_route_table.aws_route_table.public",
            "module.production_subnets.aws_subnet.public",
            "module.production_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f7097889de5f2b8",
            "region": "ap-south-1",
            "route_table_id": "rtb-04512183b526bb0f6",
            "subnet_id": "subnet-0120c325be64e5677"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "rtbassoc-09f7097889de5f2b8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_route_table.aws_route_table.public",
            "module.production_subnets.aws_subnet.public",
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "crystal-prod-private-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:subnet/subnet-00e52cdfdac9f330a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e52cdfdac9f330a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746760141698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-private-subnet-a",
              "Project": "Crystal",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-private-subnet-a",
              "Project": "Crystal",
              "Type": "Private"
            },
            "vpc_id": "vpc-0e75815bda5198e04"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "subnet-00e52cdfdac9f330a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "crystal-prod-private-subnet-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:subnet/subnet-007c5eec701ca06ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007c5eec701ca06ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746760141698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-private-subnet-b",
              "Project": "Crystal",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-private-subnet-b",
              "Project": "Crystal",
              "Type": "Private"
            },
            "vpc_id": "vpc-0e75815bda5198e04"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "subnet-007c5eec701ca06ef",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "crystal-prod-public-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:subnet/subnet-0efa15a86492442c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efa15a86492442c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "746760141698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-public-subnet-a",
              "Project": "Crystal",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-public-subnet-a",
              "Project": "Crystal",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e75815bda5198e04"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "subnet-0efa15a86492442c0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "crystal-prod-public-subnet-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:subnet/subnet-0120c325be64e5677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0120c325be64e5677",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "746760141698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-public-subnet-b",
              "Project": "Crystal",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-prod-public-subnet-b",
              "Project": "Crystal",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e75815bda5198e04"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "subnet-0120c325be64e5677",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.production_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.production_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:746760141698:vpc/vpc-0e75815bda5198e04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0f54d326617685e77",
            "default_route_table_id": "rtb-07896fc93ad62f83e",
            "default_security_group_id": "sg-09f48e3f8b320432b",
            "dhcp_options_id": "dopt-0de4d82dbb9822031",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e75815bda5198e04",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07896fc93ad62f83e",
            "owner_id": "746760141698",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-vpc",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "crystal-production-vpc",
              "Project": "Crystal"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "746760141698",
            "id": "vpc-0e75815bda5198e04",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}